Load towers trough reflection... Spawn armorstand with tower when interacted with armorstand open upgrade menu. Remove all towers on arena stop Get tower upgrade costs trough annotation Allow multiple towers to be placed